# Xietiao-desktop

./: README.md
src/: app.js  garita.css  index.html  xietiao.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  model.rs  todoist.rs
src/assets/sounds/: LEEME.txt  add-edit-todo-proyect.flac  close_settings.flac  closepopup.flac  completetodo.flac  delete.flac  initialaniation.flac  move.flac  open_settings.flac  openpopup.flac
